# binance-ai-trader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
account/: __init__.py  schemas.py  state_service.py
ai/: __init__.py  audit_schemas.py  budget_guard.py  context_builder.py  daily_reporter.py  market_analyst.py  model_router.py  openai_client.py  pricing.py  schemas.py  signal_reviewer.py  strategy_planner.py  strategy_schemas.py  system_auditor.py  trade_reviewer.py
app/: dependencies.py  main.py
backtest/: __init__.py  data_loader.py  engine.py  metrics.py  report.py
binance_client/: __init__.py  errors.py  exchange_info.py  market_stream.py  rest_client.py  signing.py  user_stream.py
broker/: base.py  binance_spot_live.py  binance_spot_testnet.py  factory.py  futures_placeholder.py
config/: risk.yaml  settings.py  strategy.yaml  symbols.yaml
dashboard/: api.py  config_service.py  web.py
data_quality/: __init__.py  gate.py  report_store.py  schemas.py
diagnostics/: __init__.py  binance_access.py  environment.py  network.py  openai_access.py  proxy_detection.py  report.py
features/: __init__.py  indicators.py  kline_store.py  market_snapshot.py
journal/: audit_store.py  daily_report.py  database.py  models.py  openai_usage_store.py  pipeline_audit.py  strategy_plan_store.py  trade_logger.py
orders/: __init__.py  order_manager.py  order_state.py  reconciliation.py
reports/: README.md
risk/: circuit_breaker.py  order_filter_validator.py  position_sizer.py  risk_engine.py
(+110 files in other folders)
