[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-ai-trader"
version = "0.1.0"
description = "Binance Global Spot Testnet AI-assisted trading bot MVP"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "SQLAlchemy>=2.0.30",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.3.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "openai>=1.60.0",
  "PyYAML>=6.0.2",
]

[tool.setuptools]
packages = [
  "app",
  "config",
  "binance_client",
  "broker",
  "features",
  "strategies",
  "ai",
  "ai.prompts",
  "risk",
  "orders",
  "journal",
  "dashboard",
  "runtime",
  "backtest",
  "diagnostics",
]

[tool.setuptools.package-data]
"ai.prompts" = ["*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
